# wt

./: .cproject  .project  CMakeLists.txt  COMPUTE_HEADERS  CONFIG.cm  CONFIG.xxua.cpp  Makefile  RULES  RULES.cm  bigint.h  bigint_test.cc  collection_functions.h  collection_functions_test.cc  error_class.h  error_class_test.cc  error_test.cc  file_functions.cc  file_functions.h  mkpackage.pl  must.h  must_test.cc  primitives.h  primitives_test.cc  rand_float.cc  rand_float.h  rand_float_test.cc  rename_compute_headers.pl  robo.files  robo.geany  robo.includes  string_functions.h  string_functions_test.cc  testing.cc  testing.h  time.cc  time.h  time_test.cc  token_tree.cc  token_tree.h  whee.cc
audio/: RULES  RULES.cm  alsa_demo.cc  audio_functions.cc  audio_functions.h  dump_srtproto.cc  extract_speechtext.cc  get_speechtext.cc  load_speechtext_db.cc  makesamples.m  process_opus.sh  process_srts.sh  search_speechtext.cc  shuffle_speechtext_db.cc  speech_sample.h  speech_sample_test.cc  speech_sampler.cc  speechtext_visitor.cc  speechtext_visitor.h  speechtext_visitor_test.cc  srt2srtproto.pl  srtproto_file.proto  srtproto_test.cc  transform_speechtext.cc  wave_file.cc  wave_file.h  wave_file_test.cc  wavey.m
cm/: RULES.cm  allocator.h  allocator_test.cc  api.cc  api.h  api_test.cc  context.h  context_test.cc  debug_allocator.cc  debug_allocator.h  interpreter.cc  lang_test.cc  lang_test_program.cc  lex_test.cc  library.cc  library.h  proto.cc  proto.h  proto_test.cc  proto_test.proto  reader.h  state.cc  state.h  state_test.cc  type.cc  type.h  value.cc  value.h  (+2 more)
(+1371 files in other folders)
