cmake_minimum_required (VERSION 2.8)
project (robo)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -Wall -Werror -include ${CMAKE_SOURCE_DIR}/primitives.h")
enable_testing()
add_custom_target(check ${CMAKE_CTEST_COMMAND} -V)

macro(test name)
  add_executable(${name}_test ${name}_test.cc)
  add_test(${name}_test ${name}_test)
  add_dependencies(check ${name}_test) 
endmacro(test)

# test(error)
test(primitives)
test(string_functions)
